--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,11 +3,11 @@ body {
 }
 // 全局导航样式
 .app-nav-bar {
-  background-color: #3296fa !important;
+  background-color: #3296fa;
   .van-nav-bar__title {
     color:#fff
   }
   .van-icon {
-    color: #fff !important
+    color: #fff;
   }
 }
